[gd_scene load_steps=6 format=3 uid="uid://bgt5rmiwy0oyw"]

[ext_resource type="Script" path="res://scripts/blob.gd" id="1_eyu83"]
[ext_resource type="PackedScene" uid="uid://dwjx80hrqpsjo" path="res://models/blob/blob_model.tscn" id="1_x4afs"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qml2j"]
height = 3.41226
radius = 1.18569

[sub_resource type="SphereShape3D" id="SphereShape3D_8oh8m"]
radius = 17.3346

[sub_resource type="SphereShape3D" id="SphereShape3D_vrcnh"]
radius = 2.335

[node name="Blob" type="CharacterBody3D" groups=["blob"]]
script = ExtResource("1_eyu83")
max_health = 3.0
peacefulness = 2.0
strength = 1.0
speed = 5.0
health_loss_per_sec = 0.1
mutation_range = 0.1
recolor_chance = 0.15

[node name="BlobModel" parent="." instance=ExtResource("1_x4afs")]
transform = Transform3D(0.31265, 0, 0.949868, 0, 1, 0, -0.949868, 0, 0.31265, 0, 0, 0)
script = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.779421, 0)
shape = SubResource("CylinderShape3D_qml2j")

[node name="Labels" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.60821, 0)

[node name="NameLabel" type="Label3D" parent="Labels"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.269639, 0)
text = "Blob"
font_size = 92

[node name="StatsLabel" type="Label3D" parent="Labels"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.247684, 0)
text = "Stats"
font_size = 92

[node name="StatusLabel" type="Label3D" parent="Labels"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.724094, 0)
text = "Status"
font_size = 92

[node name="DetectionTrigger" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionTrigger"]
shape = SubResource("SphereShape3D_8oh8m")

[node name="ActionTrigger" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ActionTrigger"]
shape = SubResource("SphereShape3D_vrcnh")

[connection signal="body_entered" from="DetectionTrigger" to="." method="_on_detection_trigger_body_entered"]
[connection signal="body_entered" from="ActionTrigger" to="." method="_on_action_trigger_body_entered"]
[connection signal="body_exited" from="ActionTrigger" to="." method="_on_action_trigger_body_exited"]
